--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             data-aos-delay="700"
             data-aos-once="true"
             class="resumeBtn"
-            href="./assets/AFEEF CV updated PDF.pdf"
+            href="./assets/afeef-resume.pdf"
             download="AFEEF AHMED Resume"
             >Get Resume</a
           >
