--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             Hi, I am Afeef
           </h1>
           <p data-aos="fade-up" data-aos-delay="600">
-            I am a freelance Animator and 3D Modeling Artist with experience creating high-quality animations and 3D models for various platforms, <br />
+            I am a freelancer as an Animator and 3D Modeling Artist with experience creating high-quality animations and 3D models for various platforms, <br />
             including games, films, and commercials. Alongside my creative work, I have also worked as a Computer Technician, <br />
             providing technical support and expertise in hardware troubleshooting, system maintenance, and network management. <br />
             My diverse skill set allows me to blend both artistic and technical solutions to deliver exceptional results.
