--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="This page contains all the things i am learing how to develop webpage"
     />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Afeef</title>
     <link rel="icon" href="./assets/images/favicon.png" type="image/x-icon" />
     <!-- Google Fonts -->
