--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <img
               data-aos="fade-up"
               data-aos-delay="300"
-              src="./assets/images/afeef.jpg"
+              src="./assets/images/PICTURE PROFILE.jpg"
               alt=""
             />
           </div>
