--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="author" content="VALAR" />
-    <meta
-      name="description"
-      content="This page contains all the things i am learing how to develop webpage"
+    <meta name="description" content="This page contains all the things i am learing how to develop webpage"
     />
+  
     <title>Portfolio | Afeef</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -119,6 +118,40 @@
         </div>
       </div>
     </section>
+    
+    <!--INSTAGRAM Btn-->
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Instagram Button</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <style>
+        .instagram-btn {
+            position: fixed;
+            bottom: 20px; /* Adjust the distance from the bottom */
+            right: 20px;  /* Adjust the distance from the right */
+            background-color: #00adb5;
+            border-radius: 50%;
+            padding: 15px;
+            color: white;
+            text-align: center;
+            font-size: 24px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+            z-index: 1000; /* Ensures the button is always on top */
+        }
+
+        .instagram-btn:hover {
+            transform: scale(1.1);
+        }
+        
+    </style>
+</head>
+<body>
+    <a href="https://www.instagram.com/afeef._.ahmed/" target="_blank" class="instagram-btn">
+        <i class="fab fa-instagram"></i>
+    </a>
+</body>
 
     <!-- Second Shape -->
     <svg
